--- a/report.html
+++ b/report.html
@@ -27,171 +27,171 @@
         </tr>
                     <tr>
                 <td>1</td>
-                <td>Edward Hopper</td>
-                <td>Qatar</td>
-                <td>342</td>
+                <td>Stromae</td>
+                <td>France</td>
+                <td>265</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Munch</td>
-                <td>Malta</td>
-                <td>224</td>
+                <td>Vincent</td>
+                <td>Panama</td>
+                <td>192</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Diego Rivera</td>
-                <td>Tonga</td>
-                <td>180</td>
+                <td>Renoir</td>
+                <td>Ireland</td>
+                <td>143</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Picasso</td>
-                <td>Kuwait</td>
-                <td>166</td>
+                <td>Seurat</td>
+                <td>Kyrgyzstan</td>
+                <td>142</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Klimt</td>
-                <td>Malaysia</td>
-                <td>153</td>
+                <td>Seurat</td>
+                <td>Eswatini</td>
+                <td>105</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>Vincent</td>
-                <td>Turkey</td>
-                <td>151</td>
+                <td>Diego Rivera</td>
+                <td>Suriname</td>
+                <td>100</td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>Matisse</td>
-                <td>Switzerland</td>
-                <td>138</td>
+                <td>Titian</td>
+                <td>Sudan</td>
+                <td>93</td>
             </tr>
             <tr>
                 <td>8</td>
-                <td>Chagall</td>
-                <td>Nigeria</td>
-                <td>129</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>Winslow Homer</td>
-                <td>Denmark</td>
-                <td>126</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>Rothko</td>
-                <td>Peru</td>
-                <td>99</td>
-            </tr>
-            <tr>
-                <td>11</td>
-                <td>Chagall</td>
-                <td>Senegal</td>
-                <td>95</td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td>Donatello</td>
-                <td>Lesotho</td>
+                <td>Michelangelo</td>
+                <td>Namibia</td>
                 <td>92</td>
             </tr>
             <tr>
+                <td>9</td>
+                <td>Kahlo</td>
+                <td>South Sudan</td>
+                <td>91</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Munch</td>
+                <td>Angola</td>
+                <td>91</td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>Manet</td>
+                <td>Cuba</td>
+                <td>88</td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Magritte</td>
+                <td>Egypt</td>
+                <td>81</td>
+            </tr>
+            <tr>
                 <td>13</td>
-                <td>Durer</td>
-                <td>Sudan</td>
-                <td>90</td>
+                <td>Edward Hopper</td>
+                <td>Canada</td>
+                <td>79</td>
             </tr>
             <tr>
                 <td>14</td>
-                <td>Raphael</td>
-                <td>Nigeria</td>
-                <td>90</td>
+                <td>Chagall</td>
+                <td>Malta</td>
+                <td>77</td>
             </tr>
             <tr>
                 <td>15</td>
-                <td>Rubens</td>
-                <td>Singapore</td>
-                <td>85</td>
+                <td>Matisse</td>
+                <td>Peru</td>
+                <td>74</td>
             </tr>
             <tr>
                 <td>16</td>
-                <td>Manet</td>
-                <td>Mexico</td>
-                <td>78</td>
-            </tr>
-            <tr>
-                <td>17</td>
-                <td>Stromae</td>
-                <td>France</td>
-                <td>76</td>
-            </tr>
-            <tr>
-                <td>18</td>
-                <td>Adele</td>
-                <td>UK</td>
-                <td>67</td>
-            </tr>
-            <tr>
-                <td>19</td>
-                <td>Warhol</td>
-                <td>Jamaica</td>
+                <td>El Greco</td>
+                <td>Cameroon</td>
                 <td>66</td>
             </tr>
             <tr>
+                <td>17</td>
+                <td>Kandinsky</td>
+                <td>Lesotho</td>
+                <td>66</td>
+            </tr>
+            <tr>
+                <td>18</td>
+                <td>Vincent</td>
+                <td>Cabo Verde</td>
+                <td>60</td>
+            </tr>
+            <tr>
+                <td>19</td>
+                <td>Monet</td>
+                <td>Guinea-Bissau</td>
+                <td>57</td>
+            </tr>
+            <tr>
                 <td>20</td>
-                <td>Munch</td>
-                <td>Mali</td>
-                <td>65</td>
+                <td>El Greco</td>
+                <td>Saint Kitts and Nevis</td>
+                <td>54</td>
             </tr>
             <tr>
                 <td>21</td>
-                <td>Kandinsky</td>
-                <td>Spain</td>
-                <td>62</td>
+                <td>Da Vinci</td>
+                <td>Mauritius</td>
+                <td>52</td>
             </tr>
             <tr>
                 <td>22</td>
-                <td>Bernini</td>
-                <td>Eswatini</td>
-                <td>59</td>
+                <td>Caravaggio</td>
+                <td>Saudi Arabia</td>
+                <td>49</td>
             </tr>
             <tr>
                 <td>23</td>
-                <td>Paul Klee</td>
-                <td>Zambia</td>
-                <td>56</td>
+                <td>Chagall</td>
+                <td>Monaco</td>
+                <td>43</td>
             </tr>
             <tr>
                 <td>24</td>
-                <td>Winslow Homer</td>
-                <td>Mexico</td>
-                <td>38</td>
+                <td>Degas</td>
+                <td>Georgia</td>
+                <td>42</td>
             </tr>
             <tr>
                 <td>25</td>
-                <td>Donatello</td>
-                <td>Azerbaijan</td>
-                <td>35</td>
+                <td>Dali</td>
+                <td>Lao People's Democratic Republic</td>
+                <td>40</td>
             </tr>
             <tr>
                 <td>26</td>
-                <td>Eminem</td>
-                <td>USA</td>
-                <td>24</td>
+                <td>Adele</td>
+                <td>UK</td>
+                <td>13</td>
             </tr>
             <tr>
                 <td>27</td>
-                <td>Ansel Adams</td>
-                <td>Saudi Arabia</td>
-                <td>21</td>
+                <td>Rothko</td>
+                <td>Kazakhstan</td>
+                <td>6</td>
             </tr>
             <tr>
                 <td>28</td>
-                <td>Botticelli</td>
-                <td>Mozambique</td>
-                <td>6</td>
+                <td>Diego Rivera</td>
+                <td>Serbia</td>
+                <td>4</td>
             </tr>
     </table>
 </body>
