--- a/report.html
+++ b/report.html
@@ -27,171 +27,129 @@
         </tr>
                     <tr>
                 <td>1</td>
-                <td>Stromae</td>
-                <td>France</td>
-                <td>265</td>
+                <td>Bernini</td>
+                <td>Lithuania</td>
+                <td>332</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Vincent</td>
-                <td>Panama</td>
-                <td>192</td>
+                <td>Manet</td>
+                <td>Ethiopia</td>
+                <td>311</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Renoir</td>
-                <td>Ireland</td>
-                <td>143</td>
+                <td>Escher</td>
+                <td>Mongolia</td>
+                <td>222</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Seurat</td>
-                <td>Kyrgyzstan</td>
-                <td>142</td>
+                <td>Durer</td>
+                <td>Palau</td>
+                <td>143</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Seurat</td>
-                <td>Eswatini</td>
-                <td>105</td>
+                <td>Munch</td>
+                <td>South Sudan</td>
+                <td>139</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>Diego Rivera</td>
-                <td>Suriname</td>
-                <td>100</td>
+                <td>Picasso</td>
+                <td>Ecuador</td>
+                <td>139</td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>Titian</td>
-                <td>Sudan</td>
-                <td>93</td>
+                <td>Picasso</td>
+                <td>Peru</td>
+                <td>133</td>
             </tr>
             <tr>
                 <td>8</td>
-                <td>Michelangelo</td>
-                <td>Namibia</td>
-                <td>92</td>
+                <td>Stromae</td>
+                <td>France</td>
+                <td>133</td>
             </tr>
             <tr>
                 <td>9</td>
-                <td>Kahlo</td>
-                <td>South Sudan</td>
-                <td>91</td>
+                <td>Kandinsky</td>
+                <td>Nepal</td>
+                <td>129</td>
             </tr>
             <tr>
                 <td>10</td>
-                <td>Munch</td>
-                <td>Angola</td>
-                <td>91</td>
+                <td>Adele</td>
+                <td>UK</td>
+                <td>109</td>
             </tr>
             <tr>
                 <td>11</td>
-                <td>Manet</td>
-                <td>Cuba</td>
-                <td>88</td>
+                <td>Pollock</td>
+                <td>Sudan</td>
+                <td>96</td>
             </tr>
             <tr>
                 <td>12</td>
                 <td>Magritte</td>
-                <td>Egypt</td>
-                <td>81</td>
+                <td>Mozambique</td>
+                <td>90</td>
             </tr>
             <tr>
                 <td>13</td>
-                <td>Edward Hopper</td>
-                <td>Canada</td>
-                <td>79</td>
+                <td>Chagall</td>
+                <td>Algeria</td>
+                <td>90</td>
             </tr>
             <tr>
                 <td>14</td>
-                <td>Chagall</td>
-                <td>Malta</td>
-                <td>77</td>
+                <td>Kahlo</td>
+                <td>Congo, Democratic Republic of the</td>
+                <td>76</td>
             </tr>
             <tr>
                 <td>15</td>
                 <td>Matisse</td>
-                <td>Peru</td>
-                <td>74</td>
+                <td>South Sudan</td>
+                <td>75</td>
             </tr>
             <tr>
                 <td>16</td>
-                <td>El Greco</td>
-                <td>Cameroon</td>
+                <td>Rembrandt</td>
+                <td>Paraguay</td>
                 <td>66</td>
             </tr>
             <tr>
                 <td>17</td>
-                <td>Kandinsky</td>
-                <td>Lesotho</td>
-                <td>66</td>
-            </tr>
-            <tr>
-                <td>18</td>
-                <td>Vincent</td>
-                <td>Cabo Verde</td>
+                <td>Durer</td>
+                <td>Barbados</td>
                 <td>60</td>
             </tr>
             <tr>
-                <td>19</td>
-                <td>Monet</td>
-                <td>Guinea-Bissau</td>
+                <td>18</td>
+                <td>Titian</td>
+                <td>Trinidad and Tobago</td>
                 <td>57</td>
             </tr>
             <tr>
+                <td>19</td>
+                <td>Dali</td>
+                <td>Uganda</td>
+                <td>36</td>
+            </tr>
+            <tr>
                 <td>20</td>
-                <td>El Greco</td>
-                <td>Saint Kitts and Nevis</td>
-                <td>54</td>
+                <td>Munch</td>
+                <td>Germany</td>
+                <td>12</td>
             </tr>
             <tr>
                 <td>21</td>
-                <td>Da Vinci</td>
-                <td>Mauritius</td>
-                <td>52</td>
-            </tr>
-            <tr>
-                <td>22</td>
-                <td>Caravaggio</td>
-                <td>Saudi Arabia</td>
-                <td>49</td>
-            </tr>
-            <tr>
-                <td>23</td>
-                <td>Chagall</td>
-                <td>Monaco</td>
-                <td>43</td>
-            </tr>
-            <tr>
-                <td>24</td>
-                <td>Degas</td>
-                <td>Georgia</td>
-                <td>42</td>
-            </tr>
-            <tr>
-                <td>25</td>
-                <td>Dali</td>
-                <td>Lao People's Democratic Republic</td>
-                <td>40</td>
-            </tr>
-            <tr>
-                <td>26</td>
-                <td>Adele</td>
-                <td>UK</td>
-                <td>13</td>
-            </tr>
-            <tr>
-                <td>27</td>
-                <td>Rothko</td>
-                <td>Kazakhstan</td>
-                <td>6</td>
-            </tr>
-            <tr>
-                <td>28</td>
-                <td>Diego Rivera</td>
-                <td>Serbia</td>
-                <td>4</td>
+                <td>Escher</td>
+                <td>Belize</td>
+                <td>8</td>
             </tr>
     </table>
 </body>
