--- a/report.html
+++ b/report.html
@@ -23,133 +23,256 @@
             <th>Position</th>
             <th>Name</th>
             <th>Country</th>
-            <th>Total sales</th>
         </tr>
                     <tr>
                 <td>1</td>
-                <td>Bernini</td>
-                <td>Lithuania</td>
-                <td>332</td>
+                <td>Eminem</td>
+                <td>USA</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Manet</td>
-                <td>Ethiopia</td>
-                <td>311</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Escher</td>
-                <td>Mongolia</td>
-                <td>222</td>
+                <td>Winslow Homer</td>
+                <td>Latvia</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Durer</td>
-                <td>Palau</td>
-                <td>143</td>
+                <td>Vincent</td>
+                <td>China</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Munch</td>
-                <td>South Sudan</td>
-                <td>139</td>
+                <td>Costa Rica</td>
             </tr>
             <tr>
-                <td>6</td>
-                <td>Picasso</td>
-                <td>Ecuador</td>
-                <td>139</td>
+                <td>5</td>
+                <td>Munch</td>
+                <td>Costa Rica</td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>Picasso</td>
-                <td>Peru</td>
-                <td>133</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>Stromae</td>
-                <td>France</td>
-                <td>133</td>
+                <td>Edward Hopper</td>
+                <td>Indonesia</td>
             </tr>
             <tr>
                 <td>9</td>
-                <td>Kandinsky</td>
-                <td>Nepal</td>
-                <td>129</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>Adele</td>
-                <td>UK</td>
-                <td>109</td>
-            </tr>
-            <tr>
-                <td>11</td>
-                <td>Pollock</td>
-                <td>Sudan</td>
-                <td>96</td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td>Chagall</td>
-                <td>Algeria</td>
-                <td>90</td>
-            </tr>
-            <tr>
-                <td>13</td>
-                <td>Magritte</td>
-                <td>Mozambique</td>
-                <td>90</td>
-            </tr>
-            <tr>
-                <td>14</td>
-                <td>Kahlo</td>
-                <td>Congo, Democratic Republic of the</td>
-                <td>76</td>
+                <td>Eminem</td>
+                <td>USA</td>
             </tr>
             <tr>
                 <td>15</td>
-                <td>Matisse</td>
-                <td>South Sudan</td>
-                <td>75</td>
+                <td>Vettriano</td>
+                <td>Micronesia (Federated States of)</td>
             </tr>
             <tr>
                 <td>16</td>
-                <td>Rembrandt</td>
-                <td>Paraguay</td>
-                <td>66</td>
-            </tr>
-            <tr>
-                <td>17</td>
-                <td>Durer</td>
-                <td>Barbados</td>
-                <td>60</td>
-            </tr>
-            <tr>
-                <td>18</td>
-                <td>Titian</td>
-                <td>Trinidad and Tobago</td>
-                <td>57</td>
+                <td>Manet</td>
+                <td>Latvia</td>
             </tr>
             <tr>
                 <td>19</td>
-                <td>Dali</td>
-                <td>Uganda</td>
-                <td>36</td>
+                <td>Vincent</td>
+                <td>Kiribati</td>
             </tr>
             <tr>
-                <td>20</td>
+                <td>23</td>
+                <td>Adele</td>
+                <td>UK</td>
+            </tr>
+            <tr>
+                <td>24</td>
+                <td>Durer</td>
+                <td>Papua New Guinea</td>
+            </tr>
+            <tr>
+                <td>25</td>
+                <td>Picasso</td>
+                <td>Malaysia</td>
+            </tr>
+            <tr>
+                <td>29</td>
+                <td>Manet</td>
+                <td>Latvia</td>
+            </tr>
+            <tr>
+                <td>29</td>
+                <td>Matisse</td>
+                <td>Eswatini</td>
+            </tr>
+            <tr>
+                <td>31</td>
+                <td>Joan Miro</td>
+                <td>Slovakia</td>
+            </tr>
+            <tr>
+                <td>32</td>
+                <td>Cezanne</td>
+                <td>Mexico</td>
+            </tr>
+            <tr>
+                <td>33</td>
+                <td>Ansel Adams</td>
+                <td>Norway</td>
+            </tr>
+            <tr>
+                <td>34</td>
                 <td>Munch</td>
-                <td>Germany</td>
-                <td>12</td>
+                <td>Costa Rica</td>
             </tr>
             <tr>
-                <td>21</td>
-                <td>Escher</td>
-                <td>Belize</td>
-                <td>8</td>
+                <td>38</td>
+                <td>Pissarro</td>
+                <td>Sudan</td>
+            </tr>
+            <tr>
+                <td>43</td>
+                <td>Stromae</td>
+                <td>France</td>
+            </tr>
+            <tr>
+                <td>43</td>
+                <td>Eminem</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>43</td>
+                <td>Eminem</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>45</td>
+                <td>Adele</td>
+                <td>UK</td>
+            </tr>
+            <tr>
+                <td>48</td>
+                <td>Bernini</td>
+                <td>United Kingdom of Great Britain and Northern Ireland</td>
+            </tr>
+            <tr>
+                <td>51</td>
+                <td>Renoir</td>
+                <td>Burundi</td>
+            </tr>
+            <tr>
+                <td>57</td>
+                <td>Eminem</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>58</td>
+                <td>Bernini</td>
+                <td>United Kingdom of Great Britain and Northern Ireland</td>
+            </tr>
+            <tr>
+                <td>63</td>
+                <td>Adele</td>
+                <td>UK</td>
+            </tr>
+            <tr>
+                <td>63</td>
+                <td>Eminem</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>65</td>
+                <td>Renoir</td>
+                <td>United Arab Emirates</td>
+            </tr>
+            <tr>
+                <td>67</td>
+                <td>Vettriano</td>
+                <td>Micronesia (Federated States of)</td>
+            </tr>
+            <tr>
+                <td>67</td>
+                <td>Vincent</td>
+                <td>Kiribati</td>
+            </tr>
+            <tr>
+                <td>68</td>
+                <td>Cezanne</td>
+                <td>Mexico</td>
+            </tr>
+            <tr>
+                <td>69</td>
+                <td>Adele</td>
+                <td>UK</td>
+            </tr>
+            <tr>
+                <td>71</td>
+                <td>Adele</td>
+                <td>UK</td>
+            </tr>
+            <tr>
+                <td>71</td>
+                <td>Picasso</td>
+                <td>Monaco</td>
+            </tr>
+            <tr>
+                <td>75</td>
+                <td>Caravaggio</td>
+                <td>Angola</td>
+            </tr>
+            <tr>
+                <td>78</td>
+                <td>Edward Hopper</td>
+                <td>Cuba</td>
+            </tr>
+            <tr>
+                <td>83</td>
+                <td>Joan Miro</td>
+                <td>Slovakia</td>
+            </tr>
+            <tr>
+                <td>87</td>
+                <td>Bernini</td>
+                <td>United Kingdom of Great Britain and Northern Ireland</td>
+            </tr>
+            <tr>
+                <td>89</td>
+                <td>Raphael</td>
+                <td>Honduras</td>
+            </tr>
+            <tr>
+                <td>93</td>
+                <td>Paul Klee</td>
+                <td>Suriname</td>
+            </tr>
+            <tr>
+                <td>95</td>
+                <td>Picasso</td>
+                <td>Malaysia</td>
+            </tr>
+            <tr>
+                <td>97</td>
+                <td>Winslow Homer</td>
+                <td>Latvia</td>
+            </tr>
+            <tr>
+                <td>98</td>
+                <td>Stromae</td>
+                <td>France</td>
+            </tr>
+            <tr>
+                <td>98</td>
+                <td>Renoir</td>
+                <td>United Arab Emirates</td>
+            </tr>
+            <tr>
+                <td>99</td>
+                <td>Matisse</td>
+                <td>Eswatini</td>
+            </tr>
+            <tr>
+                <td>99</td>
+                <td>Donatello</td>
+                <td>Gambia</td>
+            </tr>
+            <tr>
+                <td>100</td>
+                <td>Adele</td>
+                <td>UK</td>
             </tr>
     </table>
 </body>
