--- a/report.html
+++ b/report.html
@@ -21,258 +21,258 @@
     <table>
         <tr>
             <th>Position</th>
-            <th>Name</th>
-            <th>Country</th>
+            <th>Album</th>
+            <th>Artist</th>
         </tr>
                     <tr>
                 <td>1</td>
+                <td>Oboe</td>
                 <td>Eminem</td>
-                <td>USA</td>
             </tr>
             <tr>
                 <td>2</td>
+                <td>Electric Guitar</td>
                 <td>Winslow Homer</td>
-                <td>Latvia</td>
             </tr>
             <tr>
                 <td>4</td>
+                <td>Acoustic Guitar</td>
                 <td>Vincent</td>
-                <td>China</td>
             </tr>
             <tr>
                 <td>5</td>
+                <td>Ukelele</td>
                 <td>Munch</td>
-                <td>Costa Rica</td>
             </tr>
             <tr>
                 <td>5</td>
+                <td>Harp</td>
                 <td>Munch</td>
-                <td>Costa Rica</td>
             </tr>
             <tr>
                 <td>7</td>
+                <td>Ukelele</td>
                 <td>Edward Hopper</td>
-                <td>Indonesia</td>
             </tr>
             <tr>
                 <td>9</td>
+                <td>Saxophone</td>
                 <td>Eminem</td>
-                <td>USA</td>
             </tr>
             <tr>
                 <td>15</td>
+                <td>Electric Guitar</td>
                 <td>Vettriano</td>
-                <td>Micronesia (Federated States of)</td>
             </tr>
             <tr>
                 <td>16</td>
+                <td>Cello</td>
                 <td>Manet</td>
-                <td>Latvia</td>
             </tr>
             <tr>
                 <td>19</td>
+                <td>Acoustic Guitar</td>
                 <td>Vincent</td>
-                <td>Kiribati</td>
             </tr>
             <tr>
                 <td>23</td>
+                <td>Harmonica</td>
                 <td>Adele</td>
-                <td>UK</td>
             </tr>
             <tr>
                 <td>24</td>
+                <td>Acoustic Guitar</td>
                 <td>Durer</td>
-                <td>Papua New Guinea</td>
             </tr>
             <tr>
                 <td>25</td>
+                <td>Saxophone</td>
                 <td>Picasso</td>
-                <td>Malaysia</td>
             </tr>
             <tr>
                 <td>29</td>
+                <td>Harp</td>
                 <td>Matisse</td>
-                <td>Eswatini</td>
             </tr>
             <tr>
                 <td>29</td>
+                <td>Flute</td>
                 <td>Manet</td>
-                <td>Latvia</td>
             </tr>
             <tr>
                 <td>31</td>
+                <td>Bass Guitar</td>
                 <td>Joan Miro</td>
-                <td>Slovakia</td>
             </tr>
             <tr>
                 <td>32</td>
+                <td>Ukelele</td>
                 <td>Cezanne</td>
-                <td>Mexico</td>
             </tr>
             <tr>
                 <td>33</td>
+                <td>Harmonica</td>
                 <td>Ansel Adams</td>
-                <td>Norway</td>
             </tr>
             <tr>
                 <td>34</td>
+                <td>Organ</td>
                 <td>Munch</td>
-                <td>Costa Rica</td>
             </tr>
             <tr>
                 <td>38</td>
+                <td>Harp</td>
                 <td>Pissarro</td>
-                <td>Sudan</td>
             </tr>
             <tr>
                 <td>43</td>
+                <td>Revival</td>
                 <td>Eminem</td>
-                <td>USA</td>
             </tr>
             <tr>
                 <td>43</td>
+                <td>Clarinet</td>
                 <td>Eminem</td>
-                <td>USA</td>
             </tr>
             <tr>
                 <td>43</td>
+                <td>Cheese</td>
                 <td>Stromae</td>
-                <td>France</td>
             </tr>
             <tr>
                 <td>45</td>
+                <td>Violin</td>
                 <td>Adele</td>
-                <td>UK</td>
             </tr>
             <tr>
                 <td>48</td>
+                <td>Saxophone</td>
                 <td>Bernini</td>
-                <td>United Kingdom of Great Britain and Northern Ireland</td>
             </tr>
             <tr>
                 <td>51</td>
+                <td>Electric Guitar</td>
                 <td>Renoir</td>
-                <td>Burundi</td>
             </tr>
             <tr>
                 <td>57</td>
+                <td>Saxophone</td>
                 <td>Eminem</td>
-                <td>USA</td>
             </tr>
             <tr>
                 <td>58</td>
+                <td>Ukelele</td>
                 <td>Bernini</td>
-                <td>United Kingdom of Great Britain and Northern Ireland</td>
             </tr>
             <tr>
                 <td>63</td>
+                <td>Greatest Hits</td>
                 <td>Adele</td>
-                <td>UK</td>
             </tr>
             <tr>
                 <td>63</td>
+                <td>Xylophone</td>
                 <td>Eminem</td>
-                <td>USA</td>
             </tr>
             <tr>
                 <td>65</td>
+                <td>Saxophone</td>
                 <td>Renoir</td>
-                <td>United Arab Emirates</td>
             </tr>
             <tr>
                 <td>67</td>
+                <td>Cello</td>
                 <td>Vettriano</td>
-                <td>Micronesia (Federated States of)</td>
             </tr>
             <tr>
                 <td>67</td>
+                <td>Electric Guitar</td>
                 <td>Vincent</td>
-                <td>Kiribati</td>
             </tr>
             <tr>
                 <td>68</td>
+                <td>Harp</td>
                 <td>Cezanne</td>
-                <td>Mexico</td>
             </tr>
             <tr>
                 <td>69</td>
+                <td>Harp</td>
                 <td>Adele</td>
-                <td>UK</td>
             </tr>
             <tr>
                 <td>71</td>
+                <td>Drums</td>
                 <td>Picasso</td>
-                <td>Monaco</td>
             </tr>
             <tr>
                 <td>71</td>
+                <td>Harp</td>
                 <td>Adele</td>
-                <td>UK</td>
             </tr>
             <tr>
                 <td>75</td>
+                <td>Piano</td>
                 <td>Caravaggio</td>
-                <td>Angola</td>
             </tr>
             <tr>
                 <td>78</td>
+                <td>Harp</td>
                 <td>Edward Hopper</td>
-                <td>Cuba</td>
             </tr>
             <tr>
                 <td>83</td>
+                <td>Oboe</td>
                 <td>Joan Miro</td>
-                <td>Slovakia</td>
             </tr>
             <tr>
                 <td>87</td>
+                <td>Bass Guitar</td>
                 <td>Bernini</td>
-                <td>United Kingdom of Great Britain and Northern Ireland</td>
             </tr>
             <tr>
                 <td>89</td>
+                <td>Saxophone</td>
                 <td>Raphael</td>
-                <td>Honduras</td>
             </tr>
             <tr>
                 <td>93</td>
+                <td>Flute</td>
                 <td>Paul Klee</td>
-                <td>Suriname</td>
             </tr>
             <tr>
                 <td>95</td>
+                <td>Piano</td>
                 <td>Picasso</td>
-                <td>Malaysia</td>
             </tr>
             <tr>
                 <td>97</td>
+                <td>Flute</td>
                 <td>Winslow Homer</td>
-                <td>Latvia</td>
             </tr>
             <tr>
                 <td>98</td>
+                <td>Oboe</td>
                 <td>Stromae</td>
-                <td>France</td>
             </tr>
             <tr>
                 <td>98</td>
+                <td>Violin</td>
                 <td>Renoir</td>
-                <td>United Arab Emirates</td>
             </tr>
             <tr>
                 <td>99</td>
+                <td>Ukelele</td>
                 <td>Donatello</td>
-                <td>Gambia</td>
             </tr>
             <tr>
                 <td>99</td>
+                <td>Bass Guitar</td>
                 <td>Matisse</td>
-                <td>Eswatini</td>
             </tr>
             <tr>
                 <td>100</td>
+                <td>Cello</td>
                 <td>Adele</td>
-                <td>UK</td>
             </tr>
     </table>
 </body>
