--- a/report.html
+++ b/report.html
@@ -25,14 +25,14 @@
             <th>Artist</th>
         </tr>
                     <tr>
-                <td>1</td>
-                <td>Oboe</td>
-                <td>Eminem</td>
+                <td>2</td>
+                <td>Saxophone</td>
+                <td>Renoir</td>
             </tr>
             <tr>
-                <td>2</td>
+                <td>3</td>
                 <td>Electric Guitar</td>
-                <td>Winslow Homer</td>
+                <td>Eminem</td>
             </tr>
             <tr>
                 <td>4</td>
@@ -40,239 +40,239 @@
                 <td>Vincent</td>
             </tr>
             <tr>
-                <td>5</td>
-                <td>Ukelele</td>
-                <td>Munch</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Harp</td>
-                <td>Munch</td>
-            </tr>
-            <tr>
                 <td>7</td>
-                <td>Ukelele</td>
-                <td>Edward Hopper</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>Saxophone</td>
-                <td>Eminem</td>
-            </tr>
-            <tr>
-                <td>15</td>
-                <td>Electric Guitar</td>
-                <td>Vettriano</td>
-            </tr>
-            <tr>
-                <td>16</td>
-                <td>Cello</td>
-                <td>Manet</td>
-            </tr>
-            <tr>
-                <td>19</td>
-                <td>Acoustic Guitar</td>
-                <td>Vincent</td>
-            </tr>
-            <tr>
-                <td>23</td>
-                <td>Harmonica</td>
-                <td>Adele</td>
-            </tr>
-            <tr>
-                <td>24</td>
-                <td>Acoustic Guitar</td>
-                <td>Durer</td>
-            </tr>
-            <tr>
-                <td>25</td>
-                <td>Saxophone</td>
-                <td>Picasso</td>
-            </tr>
-            <tr>
-                <td>29</td>
-                <td>Harp</td>
-                <td>Matisse</td>
-            </tr>
-            <tr>
-                <td>29</td>
-                <td>Flute</td>
-                <td>Manet</td>
-            </tr>
-            <tr>
-                <td>31</td>
-                <td>Bass Guitar</td>
-                <td>Joan Miro</td>
-            </tr>
-            <tr>
-                <td>32</td>
-                <td>Ukelele</td>
-                <td>Cezanne</td>
-            </tr>
-            <tr>
-                <td>33</td>
-                <td>Harmonica</td>
-                <td>Ansel Adams</td>
-            </tr>
-            <tr>
-                <td>34</td>
-                <td>Organ</td>
-                <td>Munch</td>
-            </tr>
-            <tr>
-                <td>38</td>
-                <td>Harp</td>
-                <td>Pissarro</td>
-            </tr>
-            <tr>
-                <td>43</td>
-                <td>Revival</td>
-                <td>Eminem</td>
-            </tr>
-            <tr>
-                <td>43</td>
-                <td>Clarinet</td>
-                <td>Eminem</td>
-            </tr>
-            <tr>
-                <td>43</td>
-                <td>Cheese</td>
-                <td>Stromae</td>
-            </tr>
-            <tr>
-                <td>45</td>
-                <td>Violin</td>
-                <td>Adele</td>
-            </tr>
-            <tr>
-                <td>48</td>
-                <td>Saxophone</td>
-                <td>Bernini</td>
-            </tr>
-            <tr>
-                <td>51</td>
-                <td>Electric Guitar</td>
-                <td>Renoir</td>
-            </tr>
-            <tr>
-                <td>57</td>
-                <td>Saxophone</td>
-                <td>Eminem</td>
-            </tr>
-            <tr>
-                <td>58</td>
-                <td>Ukelele</td>
-                <td>Bernini</td>
-            </tr>
-            <tr>
-                <td>63</td>
-                <td>Greatest Hits</td>
-                <td>Adele</td>
-            </tr>
-            <tr>
-                <td>63</td>
-                <td>Xylophone</td>
-                <td>Eminem</td>
-            </tr>
-            <tr>
-                <td>65</td>
-                <td>Saxophone</td>
-                <td>Renoir</td>
-            </tr>
-            <tr>
-                <td>67</td>
-                <td>Cello</td>
-                <td>Vettriano</td>
-            </tr>
-            <tr>
-                <td>67</td>
-                <td>Electric Guitar</td>
-                <td>Vincent</td>
-            </tr>
-            <tr>
-                <td>68</td>
-                <td>Harp</td>
-                <td>Cezanne</td>
-            </tr>
-            <tr>
-                <td>69</td>
-                <td>Harp</td>
-                <td>Adele</td>
-            </tr>
-            <tr>
-                <td>71</td>
                 <td>Drums</td>
                 <td>Picasso</td>
             </tr>
             <tr>
-                <td>71</td>
-                <td>Harp</td>
-                <td>Adele</td>
-            </tr>
-            <tr>
-                <td>75</td>
-                <td>Piano</td>
-                <td>Caravaggio</td>
-            </tr>
-            <tr>
-                <td>78</td>
-                <td>Harp</td>
-                <td>Edward Hopper</td>
-            </tr>
-            <tr>
-                <td>83</td>
-                <td>Oboe</td>
-                <td>Joan Miro</td>
-            </tr>
-            <tr>
-                <td>87</td>
+                <td>9</td>
                 <td>Bass Guitar</td>
                 <td>Bernini</td>
             </tr>
             <tr>
-                <td>89</td>
-                <td>Saxophone</td>
-                <td>Raphael</td>
+                <td>11</td>
+                <td>Harp</td>
+                <td>Edward Hopper</td>
             </tr>
             <tr>
-                <td>93</td>
-                <td>Flute</td>
-                <td>Paul Klee</td>
+                <td>13</td>
+                <td>Xylophone</td>
+                <td>Eminem</td>
             </tr>
             <tr>
-                <td>95</td>
+                <td>15</td>
+                <td>Bass Guitar</td>
+                <td>Joan Miro</td>
+            </tr>
+            <tr>
+                <td>18</td>
+                <td>Organ</td>
+                <td>Munch</td>
+            </tr>
+            <tr>
+                <td>19</td>
                 <td>Piano</td>
                 <td>Picasso</td>
             </tr>
             <tr>
-                <td>97</td>
+                <td>20</td>
                 <td>Flute</td>
-                <td>Winslow Homer</td>
+                <td>Manet</td>
             </tr>
             <tr>
-                <td>98</td>
+                <td>23</td>
+                <td>Harmonica</td>
+                <td>Ansel Adams</td>
+            </tr>
+            <tr>
+                <td>26</td>
+                <td>Saxophone</td>
+                <td>Eminem</td>
+            </tr>
+            <tr>
+                <td>27</td>
+                <td>Electric Guitar</td>
+                <td>Renoir</td>
+            </tr>
+            <tr>
+                <td>29</td>
+                <td>Flute</td>
+                <td>Paul Klee</td>
+            </tr>
+            <tr>
+                <td>34</td>
+                <td>Electric Guitar</td>
+                <td>Vettriano</td>
+            </tr>
+            <tr>
+                <td>35</td>
+                <td>Cheese</td>
+                <td>Stromae</td>
+            </tr>
+            <tr>
+                <td>38</td>
+                <td>Harp</td>
+                <td>Munch</td>
+            </tr>
+            <tr>
+                <td>39</td>
+                <td>Ukelele</td>
+                <td>Munch</td>
+            </tr>
+            <tr>
+                <td>42</td>
+                <td>Cello</td>
+                <td>Vettriano</td>
+            </tr>
+            <tr>
+                <td>45</td>
+                <td>Saxophone</td>
+                <td>Bernini</td>
+            </tr>
+            <tr>
+                <td>46</td>
+                <td>Cello</td>
+                <td>Manet</td>
+            </tr>
+            <tr>
+                <td>47</td>
+                <td>Cello</td>
+                <td>Adele</td>
+            </tr>
+            <tr>
+                <td>48</td>
                 <td>Oboe</td>
                 <td>Stromae</td>
             </tr>
             <tr>
-                <td>98</td>
+                <td>49</td>
                 <td>Violin</td>
                 <td>Renoir</td>
             </tr>
             <tr>
-                <td>99</td>
-                <td>Ukelele</td>
-                <td>Donatello</td>
+                <td>51</td>
+                <td>Greatest Hits</td>
+                <td>Adele</td>
             </tr>
             <tr>
-                <td>99</td>
+                <td>52</td>
+                <td>Saxophone</td>
+                <td>Picasso</td>
+            </tr>
+            <tr>
+                <td>54</td>
+                <td>Ukelele</td>
+                <td>Bernini</td>
+            </tr>
+            <tr>
+                <td>56</td>
+                <td>Harp</td>
+                <td>Adele</td>
+            </tr>
+            <tr>
+                <td>57</td>
+                <td>Oboe</td>
+                <td>Eminem</td>
+            </tr>
+            <tr>
+                <td>58</td>
+                <td>Harmonica</td>
+                <td>Rembrandt</td>
+            </tr>
+            <tr>
+                <td>60</td>
+                <td>Piano</td>
+                <td>Caravaggio</td>
+            </tr>
+            <tr>
+                <td>67</td>
+                <td>Harmonica</td>
+                <td>Adele</td>
+            </tr>
+            <tr>
+                <td>69</td>
+                <td>Oboe</td>
+                <td>Joan Miro</td>
+            </tr>
+            <tr>
+                <td>71</td>
+                <td>Flute</td>
+                <td>Winslow Homer</td>
+            </tr>
+            <tr>
+                <td>72</td>
+                <td>Saxophone</td>
+                <td>Eminem</td>
+            </tr>
+            <tr>
+                <td>73</td>
+                <td>Acoustic Guitar</td>
+                <td>Durer</td>
+            </tr>
+            <tr>
+                <td>75</td>
+                <td>Electric Guitar</td>
+                <td>Vincent</td>
+            </tr>
+            <tr>
+                <td>76</td>
+                <td>Clarinet</td>
+                <td>Eminem</td>
+            </tr>
+            <tr>
+                <td>77</td>
+                <td>Harp</td>
+                <td>Adele</td>
+            </tr>
+            <tr>
+                <td>79</td>
+                <td>Ukelele</td>
+                <td>Cezanne</td>
+            </tr>
+            <tr>
+                <td>80</td>
+                <td>Acoustic Guitar</td>
+                <td>Vincent</td>
+            </tr>
+            <tr>
+                <td>81</td>
+                <td>Harp</td>
+                <td>Pissarro</td>
+            </tr>
+            <tr>
+                <td>87</td>
+                <td>Saxophone</td>
+                <td>Raphael</td>
+            </tr>
+            <tr>
+                <td>89</td>
+                <td>Electric Guitar</td>
+                <td>Winslow Homer</td>
+            </tr>
+            <tr>
+                <td>91</td>
+                <td>Ukelele</td>
+                <td>Edward Hopper</td>
+            </tr>
+            <tr>
+                <td>93</td>
                 <td>Bass Guitar</td>
                 <td>Matisse</td>
             </tr>
             <tr>
-                <td>100</td>
-                <td>Cello</td>
+                <td>95</td>
+                <td>Violin</td>
                 <td>Adele</td>
+            </tr>
+            <tr>
+                <td>96</td>
+                <td>Revival</td>
+                <td>Eminem</td>
+            </tr>
+            <tr>
+                <td>97</td>
+                <td>Harp</td>
+                <td>Matisse</td>
             </tr>
     </table>
 </body>
